--- a/html/css-elementary/lesson4/task3/index.html
+++ b/html/css-elementary/lesson4/task3/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <header style="background-color: red; height: 100px">
-      <h1 style="font-syze: 24px; color: white">
+      <h1 style="font-size: 24px; color: white">
         Главный заголовок на странице
       </h1>
     </header>
