lesson 8 box model task1

--- a/html/css-elementary/lesson8_hw/task1/index.html
+++ b/html/css-elementary/lesson8_hw/task1/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div class="box1 box">Content Box Sizing</div>
-    <div class="box2 box">Content Box Sizing</div>
+    <div class="box2 box">Border Box Sizing</div>
   </body>
 </html>
