--- a/html/css-elementary/lesson9_hw/task4/index.html
+++ b/html/css-elementary/lesson9_hw/task4/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">Header</header>
-    <main class="main">Main</main>
+    <main>Main</main>
     <aside class="sidebar">Sidebar</aside>
     <footer class="footer">Footer</footer>
   </body>
