--- a/html/css-elementary/lesson10_flexbox_hw/task3/index.html
+++ b/html/css-elementary/lesson10_flexbox_hw/task3/index.html
@@ -17,9 +17,9 @@
       <header class="header">
         <nav>
           <ul class="navigation">
-            <li class="nav_item">Foo1</li>
-            <li class="nav_item">Foo2</li>
-            <li class="nav_item">Foo3</li>
+            <li class="nav_item">About</li>
+            <li class="nav_item">Products</li>
+            <li class="nav_item">Contacts</li>
           </ul>
         </nav>
       </header>
