--- a/html/css-elementary/lesson15_hw/task2/index.html
+++ b/html/css-elementary/lesson15_hw/task2/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    e">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
@@ -20,6 +19,7 @@
     >
       <source
         src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4"
+        type="video/mp4"
       />
     </video>
   </body>
