--- a/html/css-elementary/lesson16_hw/task1/index.html
+++ b/html/css-elementary/lesson16_hw/task1/index.html
@@ -27,10 +27,16 @@
         >
       </div>
       <div class="choose-gender">
-        <label><input type="radio" name="gender" />Male</label>
-        <label><input type="radio" name="gender" />Female</label>
+        <div>
+          <label><input type="radio" name="gender" />Male</label>
+        </div>
+        <div>
+          <label><input type="radio" name="gender" />Female</label>
+        </div>
 
-        <label><input type="radio" name="gender" />Secret</label>
+        <div>
+          <label><input type="radio" name="gender" />Secret</label>
+        </div>
       </div>
       <div>
         <textarea
