--- a/html/css-elementary/lesson16_hw/task1/index.html
+++ b/html/css-elementary/lesson16_hw/task1/index.html
@@ -21,26 +21,18 @@
         <input type="number" value="17" name="age" />
       </div>
       <div>
-        <input id="accept-terms" type="checkbox" name="agree" /><label
-          for="accept-terms"
-          >Accept terms and conditions</label
-        >
+        <input type="checkbox" name="agree" />
+        <label>Accept terms and conditions</label>
       </div>
 
       <div class="choose-gender">
-        <input id="gender__male" type="radio" name="gender" /><label
-          for="gender__male"
-          >Male</label
-        >
-        <input id="gender__female" type="radio" name="gender" /><label
-          for="gender__female"
-          >Female</label
-        >
+        <input id="gender__male" type="radio" name="gender" />
+        <label for="gender__male">Male </label>
+        <input id="gender__female" type="radio" name="gender" />
+        <label for="gender__female">Female</label>
 
-        <input id="gender__secret" type="radio" name="gender" /><label
-          for="gender__secret"
-          >Secret</label
-        >
+        <input id="gender__secret" type="radio" name="gender" />
+        <label for="gender__secret">Secret</label>
       </div>
       <div>
         <textarea
