--- a/html/css-elementary/lesson16_hw/task1/index.html
+++ b/html/css-elementary/lesson16_hw/task1/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="choose-gender">
-        <input id="gender__male" type="radio" name="gender" />
+        <input id="gender__male" type="radio" name="gender" checked />
         <label for="gender__male">Male </label>
         <input id="gender__female" type="radio" name="gender" />
         <label for="gender__female">Female</label>
