--- a/html/css-elementary/lesson16_hw/task5/index.html
+++ b/html/css-elementary/lesson16_hw/task5/index.html
@@ -48,7 +48,7 @@
           name="story"
           cols="30"
           rows="5"
-          placeholder="long time ago..."
+          placeholder="A long time ago..."
         ></textarea>
       </div>
       <div>
