--- a/html/css-elementary/lesson16_hw/task5/index.html
+++ b/html/css-elementary/lesson16_hw/task5/index.html
@@ -15,12 +15,20 @@
   <body>
     <form>
       <div>
-        <input type="text" placeholder="HTML" name="primaryLanguage" disabled />
+        <input type="text" value="HTML" name="primaryLanguage" disabled />
       </div>
-      <div><input type="checkbox" name="agree" /></div>
-      <div><input type="checkbox" name="like" checked /></div>
-      <div><input type="color" name="favouriteColor" value="#ff7f50" /></div>
-      <div><input type="date" name="birthDate" value="2021-01-02" /></div>
+      <div>
+        <input type="checkbox" name="agree" />
+      </div>
+      <div>
+        <input type="checkbox" name="like" checked />
+      </div>
+      <div>
+        <input type="color" name="favouriteColor" value="#ff7f50" />
+      </div>
+      <div>
+        <input type="date" name="birthDate" value="2021-01-02" />
+      </div>
       <div>
         <input
           type="datetime-local"
