--- a/html/css-elementary/lesson16_hw/task5/index.html
+++ b/html/css-elementary/lesson16_hw/task5/index.html
@@ -62,7 +62,7 @@
       <div>
         <input type="password" name="password" value="secret" />
       </div>
-      <div class="language">
+      <div class="languages">
         <input type="radio" name="language" value="html" />
         <label>HTML</label>
         <input type="radio" name="language" value="css" checked />
