--- a/html/css-elementary/lesson18_svg/task1/index.html
+++ b/html/css-elementary/lesson18_svg/task1/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="row">
       <div class="column">
-        <img class="small-bird" src="image.png" alt="PNG small bird" />
-        <img class="large-bird" src="image.png" alt="PNG large bird" />
+        <img class="small-bird" src="bird.png" alt="PNG small bird" />
+        <img class="large-bird" src="bird.png" alt="PNG large bird" />
       </div>
       <div class="column">
         <img class="small-bird" src="image.svg" alt="SVG small bird" />
