--- a/html/css-elementary/lesson18_svg/task3/index.html
+++ b/html/css-elementary/lesson18_svg/task3/index.html
@@ -17,6 +17,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <i class="fa fa-battery-full" aria-hidden="true"></i>
+      <i class="fa fa-battery-three-quarters" aria-hidden="true"></i>
+      <i class="fa fa-battery-half" aria-hidden="true"></i>
+      <i class="fa fa-battery-quarter" aria-hidden="true"></i>
+      <i class="fa fa-battery-empty" aria-hidden="true"></i>
+    </div>
+  </body>
 </html>
