--- a/lesson21_responsive/task2/index.html
+++ b/lesson21_responsive/task2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Responsive layout</title>
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -11,8 +11,16 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <main class="main-content">
+    <section class="gallery">
+      <img class="main-image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson21/task2/nature.jpeg" alt="Land">
+    </section>
+    <aside class="ideas">
+      <span class="idea">Keep calm</span>
+    </aside>
+  </main>
 </body>
 </html>
